Fix(CSS): nav covering content on xs devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ html {
 
 /* Push the body below the header to make it visible */
 body {
-    padding-top: 100px;
+    padding-top: 120px;
     max-width: 1400px !important;
     display: flex;
     flex-direction: column;
@@ -503,6 +503,13 @@ input {
     width: 0;
 }
 
+
+
+@media screen and (min-width: 323px) {
+    body {
+        padding-top: 100px;
+    }
+}
 
 @media screen and (min-width: 576px) {
 
